--- a/src/styles/global/mixins.less
+++ b/src/styles/global/mixins.less
@@ -21,3 +21,16 @@
     width: 100%;
     max-width: 624px;
   }
+
+  .is-hidden{
+    position: absolute !important; 
+    width: 0 !important;
+    height: 0 !important;
+    margin: 0 !important;
+    padding: 0 !important;
+    border: 0 !important;
+    visibility: hidden !important;
+    pointer-events: none !important;
+    overflow: hidden !important;
+    white-space: nowrap !important;
+  }
