--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -5,14 +5,17 @@
 
 //vendor
 
-
 //block
 @import "blocks/body.less";
 @import "blocks/home.less";
 @import "blocks/title.less";
 
 @import "blocks/btn.less";
+@import "blocks/radio.less";
+@import "blocks/check.less";
 @import "blocks/section-title.less";
+@import "blocks/field.less";
+@import "blocks/form.less";
 
 @import "blocks/listing.less";
 @import "blocks/reserve.less";
@@ -21,6 +24,7 @@
 @import "blocks/event.less";
 @import "blocks/event-card.less";
 
+@import "blocks/pp.less";
 @import "blocks/page-header.less";
 @import "blocks/page-footer.less";
 @import "blocks/main-header.less";
