--- a/src/styles/global/variables.less
+++ b/src/styles/global/variables.less
@@ -1,8 +1,8 @@
 // Цветовая палитра
 @white: #ffffff;
 @black: #1f1e1e;
-@black_80: fabe(@black, 80%);
-@black_40: fabe(@black, 40%);
+@black_80: fade(@black, 80%);
+@black_40: fade(@black, 40%);
 @red: #bc3324;
 @red_dark: #a51505;
 @gray: #dedede;
