--- a/src/styles/blocks/listing.less
+++ b/src/styles/blocks/listing.less
@@ -13,5 +13,12 @@
         width: calc(33.3333% - 60px);
         margin: 0 30px 120px;
     }
+
+    &__link {
+        display: flex;
+        align-self: end;
+        margin: 85px 15px;
+    }
+
 }
 
