--- a/src/styles/blocks/page-footer.less
+++ b/src/styles/blocks/page-footer.less
@@ -60,4 +60,44 @@
       color: @red;
     }
   }
+
+  &__copyright{
+    margin-top: 60px;
+    font-family: @font1;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 20px;
+  }
+
+
+  &__other{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+  }
+
+  &__other-cookies{
+    margin-left: 60px;
+  }
+
+  &__other-media{
+    display: flex;
+    justify-content: space-between;
+    width: 160px;
+    margin-left: 203px;
+  }
+
+  &__other-promote{
+    position: absolute;
+    right: 0;
+    display: flex;
+    align-self: end;
+    align-items: center;
+    justify-content: space-between;
+    width: 296px;
+  }
+
+
 }
