--- a/src/styles/blocks/home.less
+++ b/src/styles/blocks/home.less
@@ -1,3 +1,26 @@
 .home {
-    padding-top: 147px;
+    padding: 100px 0;
+                
+    &__listing {
+    margin-bottom: 85px;
+    }
+
+    &__upcoming {
+        background-color: @white;
+        margin-bottom: 95px;
+    }
+
+    &__about {
+        margin-bottom: 95px;
+    }
+
+    &__contacts {
+        margin-bottom: 95px;
+    }
+
+    &__info {
+        margin-bottom: 80px;
+    }
+
+
 }
