--- a/src/styles/blocks/page-footer.less
+++ b/src/styles/blocks/page-footer.less
@@ -78,15 +78,18 @@
     position: relative;
   }
 
+
   &__other-cookies{
-    margin-left: 60px;
+    // margin-left: 60px;
+    margin-left: 4.5%;
   }
 
   &__other-media{
     display: flex;
     justify-content: space-between;
     width: 160px;
-    margin-left: 203px;
+    // margin-left: 203px;
+    margin-left: 16%;
   }
 
   &__other-promote{
