--- a/src/styles/blocks/home.less
+++ b/src/styles/blocks/home.less
@@ -1,5 +1,6 @@
 .home {
-    padding: 100px 0;
+    // padding: 100px 0;
+    padding: 0 0 100px 0;
                 
     &__listing {
     margin-bottom: 85px;
