fin with no errors

--- a/src/styles/blocks/page-footer.less
+++ b/src/styles/blocks/page-footer.less
@@ -78,9 +78,14 @@
     position: relative;
   }
 
+  &__other-policy{
+    margin-top: 1%;
+  }
+
 
   &__other-cookies{
     // margin-left: 60px;
+    margin-top: 1%;
     margin-left: 4.5%;
   }
 
@@ -90,11 +95,13 @@
     width: 160px;
     // margin-left: 203px;
     margin-left: 16%;
+    margin-top: -1.5%;
   }
 
   &__other-promote{
     position: absolute;
     right: 0;
+    bottom: 50%;
     display: flex;
     align-self: end;
     align-items: center;
@@ -102,5 +109,12 @@
     width: 296px;
   }
 
+  &__other-promote-link{
+    display: flex;
+    align-self: end;
+    align-items: center;
+    justify-content: space-between;
+    width: 296px;
+  }
 
 }
